examples/high-quality-code/coupling/coupling-types/bad/internal-knowledge/global-data/a-module.mjs
import { shapeData } from "./shared-data.mjs";

export function setSides(width, height) {
  shapeData.width = width;
  shapeData.height = height;
}
